# wireshark-mcp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPREHENSIVE_TOOL_REPORT.md  Dockerfile  LICENSE  README.md  TOOLS_STATUS_REPORT.md  VERSION_COMPARISON_REPORT.md  WIRESHARK_MCP_TEST_REPORT.md  async_long_capture.py  capture_test_results.md  cursor_audit_server.py  enhanced_server.py  mcp_compliance_integration.py  mcp_live_capture.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  server.py  setup_permissions.sh  test_capture.py  test_enhanced_tools.py  test_tools.py  tools_bridge.py
.claude/: config.json  mcp.json
.claude/agents/: 10x-code-architecture-specialist.md  10x-competitive-intelligence-researcher.md  10x-enterprise-coordination-director.md  10x-innovation-intelligence-analyst.md  10x-intelligence-coordination-hub.md  10x-knowledge-synthesis-coordinator.md  10x-performance-intelligence-specialist.md  10x-predictive-performance-oracle.md  10x-resource-intelligence-manager.md  10x-security-intelligence-auditor.md  10x-technical-pattern-discovery.md  10x-test-command-validation-specialist.md  10x-workflow-acceleration-engine.md  agent-orchestrator.md  mcp-orchestration-master.md  performance-engineer.md  project-architect.md  security-auditor.md
.claude/commands/: analyze_10x.md  analyze_and_execute.md  create_feature_spec_10x.md  deep_analysis_10x.md  implement_10x.md  intelligent_testing_orchestrator_10x.md  knowledge_intelligence_synthesizer_10x.md  layered_agentic_analysis.md  learn_and_adapt_10x.md  local_command_generator_10x.md  mcp_ecosystem_manager_10x.md  ml_powered_development_10x.md  organize_and_analyze_10x.md  project_accelerator_10x.md  rag_intelligence_orchestrator_10x.md  security_intelligence_orchestrator_10x.md  (+1 more)
.github/: pull_request_template.md
src/: enhanced_wireshark_mcp_server.py  wireshark_mcp_server.py
tests/: test_capture_flow.py  test_errors_and_env.py  test_filters.py  test_handlers.py  test_integration_nobinary.py  test_integration_tools.py  test_parsers.py  test_registry.py  test_utils.py
wireshark_mcp/: __init__.py  cli.py  server.py
(+85 files in other folders)
