[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wireshark-mcp"
version = "0.1.0"
description = "Wireshark MCP server with real-time JSON streaming and analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Wireshark MCP Team" }]
keywords = ["wireshark", "tshark", "network", "pcap", "mcp", "security", "blue-team", "red-team"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: System :: Networking :: Monitoring",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
urls = {"Homepage" = "https://example.com/wireshark-mcp", "Repository" = "https://example.com/repo"}
dependencies = [
  "mcp>=1.1.0",
  "psutil>=5.9.0",
]

[project.scripts]
wireshark-mcp-server = "wireshark_mcp.cli:run"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = []
target-version = "py39"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]